examples/test/testpolicy5206.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5206
  namespace: namespace422
spec:
  podSelector:
    matchLabels:
      key5: value15
      key4: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key38: value43
          key42: value17
          key1: value18
      podSelector:
        matchLabels:
          key19: value29
          key38: value37
          key46: value6
